name:          tsl-parser
version:       1.3.1.0
synopsis:      Parser library for the TSL specification format
license:       OtherLicense
license-file:  LICENSE
author:        Felix Klein <felix.klein@cispa.de>
               Mark Santolucito <mark.santolucito@yale.edu>
               Philippe Heim <philippe.heim@cispa.de>
               Gideon Geier <gideon.geier@cispa.de>
               Marvin Stenger <marvin.stenger@cispa.de>
maintainer:    Philippe Heim <philippe.heim@cispa.de>
build-type:    Simple
cabal-version: >=1.10

library

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -fno-ignore-asserts

  build-depends:
      base >=4.7
    , parsec >=3.1
    , array >=0.5
    , mtl >=2.2
    , containers >=0.5

  exposed-modules:
    TSL

  other-modules:
    TSL.Binding
    TSL.Error
    TSL.Expression
    TSL.Specification
    TSL.StringMap
    TSL.SymbolTable
    TSL.Types
    TSL.Parser
    TSL.Parser.Data
    TSL.Parser.Expression
    TSL.Parser.Global
    TSL.Parser.Utils
    TSL.Reader
    TSL.Reader.Abstraction
    TSL.Reader.Bindings
    TSL.Reader.Data
    TSL.Reader.InferType
    TSL.Reader.Sugar
    TSL.Logic
    TSL.Eval
    
  hs-source-dirs:
    src/lib

  default-language:
    Haskell2010
